--- a/slave/rpmbuilder/Dockerfile
+++ b/slave/rpmbuilder/Dockerfile
@@ -5,12 +5,10 @@ LABEL type="docker-centos_i386-rpmbuilder"
 
 ENV SWARM_VERSION 2.2
 ENV KERNEL_VERSION 2.6.32-696.1.1.el6.i686
-ENV MACHINE i686
-ENV PROCESSOR i686
-ENV HW i386
 
 COPY rpmmacros /root/.rpmmacros
 COPY fakeuname.sh /usr/local/sbin/fakeuname.sh
+COPY fakebash.sh /usr/local/sbin/fakebash.sh
 
 RUN curl -o /opt/swarm-client-${SWARM_VERSION}-jar-with-dependencies.jar http://repo.jenkins-ci.org/releases/org/jenkins-ci/plugins/swarm-client/${SWARM_VERSION}/swarm-client-${SWARM_VERSION}-jar-with-dependencies.jar \
   && echo -e '#!/bin/bash\n\nexec java -jar /opt/swarm-client-$SWARM_VERSION-jar-with-dependencies.jar -disableClientsUniqueId -username $JENKINS_USERNAME -password $JENKINS_PASSWORD -mode ${JENKINS_MODE:-exclusive} -name $JENKINS_SLAVE_NAME -executors ${JENKINS_EXEC_NR:-1} -master ${JENKINS_URL:-127.0.0.1} -fsroot $JENKINS_FS_ROOT -labels "${JENKINS_LABELS:-swarm}"' > /usr/bin/swarm_slave.sh \
@@ -28,6 +26,9 @@ RUN curl -o /opt/swarm-client-${SWARM_VERSION}-jar-with-dependencies.jar http://
   && rpmdev-setuptree \
   && chmod 700 /usr/local/sbin/fakeuname.sh \
   && ln -s /usr/local/sbin/fakeuname.sh /usr/local/sbin/uname \
+  
+  && chmod 700 /usr/local/sbin/fakebash.sh \
+  && ln -s /usr/local/sbin/fakebash.sh /usr/local/sbin/bash \
 
 # clean all cache to clean space
   && rm -rf /var/cache/yum/* \
